--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <div class="get-the-app">
                 <p class="get-app">Baixe o aplicativo.</p>
                 <div class="download">
-                    <a href="#" class="google-download"></a>
-                    <a href="#" class="apple-download"></a>
+                    <a href="#" class="app-download"></a>
+                    <a href="#" class="app-download"></a>
                 </div>
             </div>
         </div>
